2006-04-06  Hans Rakers <hans at parse dot nl>

	* Reverted the change to the handling of ZEND_BRK made by me on
	  2006-03-17 since it wasn't working as it should. Since this
	  reintroduces sf.net bug #1442923 i added some code to prevent this
	  bug using a different approach, by restoring operand types changed
	  by build_cfg if build_cfg exits with exit code 0.

	  Since php-5.1 some opcode handlers expect a strict set of operand
	  types, anything else results in 'Invalid opcode' errors. Since
	  build_cfg changes some operand types these changes need to be
	  reverted once the optimizer finishes. For now the only opcode to
	  which this all applies is ZEND_FETCH_CONSTANT, which expects
	  either a CONST or a UNUSED in op1 and a CONST in op2 (See
	  zend_vm_def.h)

2006-04-04  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Fixed some error introduced by fixing some win32 stuff :(

2006-04-03  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Moved the FLOCK stuff to a place so it can be used by eLoader to
        * Fixed quite some compile warnings on Win32
        * Updated VC6 project files

2006-03-28  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Removed the constant that were registered in the debug code. They 
          could only be used in php code and not in the config file. This 
          handles bug #29

2006-03-25  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Source code is now shown in dasm.php
        * Added source-code lines to the returned opcode array in ea_dasm.c

2006-03-21  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Fixed bug #24

2006-03-17  Hans Rakers <hans at parse dot nl>

        * Fix for sf.net bug #1442839 (handling of ZEND_ASSIGN_OBJ by the
          optimizer)
        * Changed BRK handling to not bail out of the optimizer prematurely
          on a multi-level break. This does need some more testing, but
          should fix sf.net bug #1442923